testdata/baselines/reference/compiler/jsSpeculativeParsingError.errors.txt
jsSpeculativeParsingError(1,21): error TS1005: ',' expected.
jsSpeculativeParsingError(1,21): error TS1003: Identifier expected.
jsSpeculativeParsingError(1,25): error TS1005: ',' expected.
jsSpeculativeParsingError(1,29): error TS1005: ',' expected.
jsSpeculativeParsingError(1,29): error TS1005: ';' expected.
jsSpeculativeParsingError(1,29): error TS1128: Declaration or statement expected.
jsSpeculativeParsingError(1,30): error TS1003: Identifier expected.
jsSpeculativeParsingError(1,87): error TS1003: Identifier expected.
jsSpeculativeParsingError(1,102): error TS1128: Declaration or statement expected.
jsSpeculativeParsingError(1,102): error TS1005: ']' expected.
jsSpeculativeParsingError(1,102): error TS1005: ')' expected.
jsSpeculativeParsingError(1,102): error TS1005: ',' expected.
jsSpeculativeParsingError(1,102): error TS1128: Declaration or statement expected.
jsSpeculativeParsingError(1,102): error TS1005: ';' expected.

==== jsSpeculativeParsingError (14 errors) ====
    
t.js(2,20): error TS1005: ',' expected.
t.js(2,20): error TS1003: Identifier expected.
t.js(2,24): error TS1005: ',' expected.
t.js(2,28): error TS1005: ',' expected.
t.js(2,28): error TS1005: ';' expected.
t.js(2,28): error TS1128: Declaration or statement expected.
t.js(2,29): error TS1003: Identifier expected.
t.js(5,19): error TS1003: Identifier expected.
t.js(6,14): error TS1128: Declaration or statement expected.
t.js(6,14): error TS1005: ']' expected.
t.js(6,14): error TS1005: ')' expected.
t.js(6,14): error TS1005: ',' expected.
t.js(6,14): error TS1128: Declaration or statement expected.
t.js(6,14): error TS1005: ';' expected.

==== t.js (14 errors) ====
    
    const is_morning = new Date().getHours() < 12;
                       ~~~
!!! error TS1005: ',' expected.
                       ~~~
!!! error TS1003: Identifier expected.
                           ~~~~
!!! error TS1005: ',' expected.
                               ~
!!! error TS1005: ',' expected.
                               ~
!!! error TS1005: ';' expected.
                               ~
!!! error TS1128: Declaration or statement expected.
                                ~
!!! error TS1003: Identifier expected.
    
    // prettier-ignore
    const greeting = ([
                      ~
!!! error TS1003: Identifier expected.
      is_morning ? 'good morning' : 'good evening'
                 ~
!!! error TS1128: Declaration or statement expected.
                 ~
!!! error TS1005: ']' expected.
                 ~
!!! error TS1005: ')' expected.
                 ~
!!! error TS1005: ',' expected.
                 ~
!!! error TS1128: Declaration or statement expected.
                 ~
!!! error TS1005: ';' expected.
    ]);
    
